--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#FF3C38 "
-backgroundColor="#FF3C38"
+backgroundColor="#86BBD8"
 secondaryBackgroundColor="#FF8C42"
 textColor="#6C8EAD"
 font="Sans serif"
