--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#FF3C38 "
+primaryColor="#F6AE2D"
 backgroundColor="#86BBD8"
-secondaryBackgroundColor="#FF8C42"
-textColor="#6C8EAD"
+secondaryBackgroundColor="#F26419"
+textColor="#2F4858"
 font="Sans serif"
