--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F6AE2D"
 backgroundColor="#EDD382"
-secondaryBackgroundColor="#F2F3AE"
+secondaryBackgroundColor="#C9F299"
 textColor="#2F4858"
 font="Sans serif"
