--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F6AE2D"
 backgroundColor="#86BBD8"
-secondaryBackgroundColor="#C9F299"
+secondaryBackgroundColor="#DAF7DC"
 textColor="#2F4858"
 font="Sans serif"
