--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#F6AE2D"
-backgroundColor="#86BBD8"
-secondaryBackgroundColor="#DAF7DC"
-textColor="#2F4858"
+backgroundColor="#2F4858"
+secondaryBackgroundColor="#9EE493"
+textColor="#DAF7DC"
 font="Sans serif"
